# AiDetection

./: .gitignore  Cargo.toml  README.md  client-tracking.py
client-tracking/: Cargo.toml  build.rs  get_models.py  yolov8m.onnx.REMOVED.git-id
client-tracking/models/: mode-yolov8-n.onnx.REMOVED.git-id  model-yolov8-s-oiv7.onnx.REMOVED.git-id  model-yolov8-s.onnx.REMOVED.git-id
client-tracking/src/: image_processing.rs  main.rs
client-tracking/src/image_processing/: iou_helper.rs  yolo.rs  yolo_onnx.rs  yolo_tensorrt.rs
controller/: Cargo.toml
controller-with-gui/: Cargo.toml
controller-with-gui/src/: controller.rs  load_image.rs  main.rs  update_gui.rs
controller-with-gui/src/api_v1/: api_tracking.rs
controller-with-gui/src/api_v1/api_frontend/: get_data.rs
controller-with-gui/src/api_v1/api_tracking/: get_image.rs  post_data.rs
controller-with-gui/src/load_image/: load_camera_image.rs  load_local_image.rs
controller/src/: controller.rs  load_image.rs  main.rs  web_interface.rs  websocket.rs
controller/src/api_v1/: api_frontend.rs  api_tracking.rs  mod.rs  websocket.rs
controller/src/api_v1/api_frontend/: get_data.rs  get_image.rs  get_images.rs
controller/src/api_v1/api_shared/: api_helper.rs  get_data.rs  mod.rs
controller/src/api_v1/api_tracking/: get_data.rs  get_image.rs  post_data.rs
controller/src/controller/: load_camera_image.rs  load_local_image.rs
controller/src/controller_helper/: markup_image.rs  mod.rs
controller/src/load_image/: load_camera_image.rs  load_local_image.rs
frontend/: Cargo.toml  index.html
frontend-egui/: Cargo.toml
frontend-egui/src/: load_images.rs  main.rs  update_gui.rs
frontend/src/: main.rs
processing-node/: Cargo.toml  build.rs  get_models.py
processing-node/src/: image_processing.rs  main.rs
processing-node/src/image_processing/: iou_helper.rs  yolo_onnx.rs  yolo_tensorrt.rs
shared-types/: Cargo.toml  build.rs
shared-types/src/: client.rs  lib.rs  server.rs  tracking.rs  yolo.rs
shared-types/src/tracking/: yolo.rs
yolov8-bindings/: Cargo.toml  build.rs
yolov8-bindings/include/: common.hh  yolov8.hh
yolov8-bindings/src/: lib.rs  yolov8.cc
yolov8-bindings/tests/: tests.rs
