[package]
name = "client-tracking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde_json = { version = "1.0.107" }
bincode = { version = "1.3.3" }
url = { version = "2.4.1" }
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = { version = "0.1.14" }
tokio-tungstenite = { version = "0.20.1" }
futures-util = { version = "0.3.29" }
futures-channel = { version = "0.3.29" }
image = { version = "0.24.7" }
shared-types = { path = "../shared-types" }
ndarray = { version = "0.15.6" }
ort = { version = "1.16.2" }
deku = { version = "0.16.0" }
lazy_static = { version = "1.4.0" }
