[package]
name = "client-tracking"
version = "0.1.0"
edition = "2021"

[features]
default = ["model-yolov8-s-oiv7"]


# Currently Supported models
#    all models should be in the ./models/ folder with same name 
model-yolov8-s = []
model-yolov8-n = []
model-yolov8-m = []
model-yolov8-s-oiv7 = []

[dependencies]
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde_json = { version = "1.0.107" }
bincode = { version = "1.3.3" }
url = { version = "2.4.1" }
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = { version = "0.1.14" }
tokio-tungstenite = { version = "0.20.1" }
futures-util = { version = "0.3.29" }
futures-channel = { version = "0.3.29" }
image = { version = "0.24.7" }
shared-types = { path = "../shared-types", features = ["model-yolov8-s-oiv7"] }
ndarray = { version = "0.15.6" }
ort = { version = "1.16.2" }
deku = { version = "0.16.0" }
lazy_static = { version = "1.4.0" }

[build-dependencies]
feature_utils = "0.0.0"
