[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["load-file"]


# Currently Supported ways to get images
load-file = []
load-camera = ["dep:libcamera"]


[dependencies]
dashmap = { version = "5.5.3", features = ["serde"] }
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde_json = { version = "1.0.107" }
bincode = { version = "1.3.3" }
warp = { version = "0.3.6" }
base64 = { version = "0.21.5" }
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = { version = "0.1.14" }
futures-util = { version = "0.3.29" }
image = { version = "0.25" }
imageproc = { version = "0.24" }
shared-types = { path = "../shared-types" }
ab_glyph = { version = "0.2.25" }
libcamera = { version = "0.2.3", optional = true }
eframe = { version = "0.27.2" }
egui_extras = { version = "0.27.2", features = ["default", "all_loaders"] }
bytes = "1.6.0"
anyhow = "1.0.82"
