[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "5.5.3", features = ["serde"] }
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde_json = { version = "1.0.107" }
bincode = { version = "1.3.3" }
warp = { version = "0.3.6" }
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = { version = "0.1.14" }
futures-util = { version = "0.3.29" }
image = { version = "0.24.7" }
imageproc = { version = "0.23.0" }
shared-types = { path = "../shared-types" }
