[package]
name = "frontend-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.27.2" }
egui_extras = { egui_extras = "0.27.2", features = ["default", "all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] }
tokio = { version = "1.33.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
bytes = "1.6.0"
shared-types = { path = "../shared-types" }
anyhow = "1.0.82"
