[package]
name = "frontend-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.27.2" }
egui_extras = { version = "0.27.2", features = ["default", "all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] }
tokio = { version = "1.33.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
bytes = "1.6.0"
shared-types = { path = "../shared-types" }
anyhow = "1.0.82"
imageproc = { version = "0.24" }
ab_glyph = { version = "0.2.25" }
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde_json = { version = "1.0.107" }
