[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
anyhow = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
yew-websocket = "1.21.0"
#tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12" }
url = { version = "^2.1" }
web-sys = { version = "0.3.39", features = ["Window", "Location"] }
wasm-bindgen-futures = "0.4.12"
wasm-bindgen = { version = "0.2.77", features = ["serde-serialize"] }
base64 = "0.22.0"
