[package]
name = "processing-node"
version = "0.1.0"
edition = "2021"

[features]
default = ["model-yolov8n", "engine-onnx"]


# Currently Supported models
model-yolov8s = []
model-yolov8n = []
model-yolov8m = []
model-yolov8s-oiv7 = []
engine-onnx = ["dep:ort"]
engine-tensorrt = ["dep:yolov8-bindings", "dep:cxx"]

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
image = { version = "0.25" }
shared-types = { path = "../shared-types" }
ndarray = { version = "0.15.6" }
ort = { version = "2.0.0-rc.0", features = [
    "cuda",
    "tensorrt",
], optional = true }
yolov8-bindings = { path = "../yolov8-bindings", optional = true }
cxx = { version = "1.0", optional = true }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"

[build-dependencies]
feature_utils = "0.0.0"
