[package]
name = "shared-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.190", features = ["derive", "rc"] }
image = { version = "0.24.7" }
deku = { version = "0.16.0" }
tokio = { version = "1.33.0", features = ["full"] }
warp = { version = "0.3.6" }
