[package]
name = "shared-types"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = { version = "5.5.3", features = ["serde"] }
serde = { version = "1.0.190", features = ["derive", "rc"] }
image = { version = "0.24.7" }
tokio = { version = "1.33.0", features = ["full"] }
warp = { version = "0.3.6" }
strum = "0.26"
strum_macros = "0.26"
